--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <button id="get-joke">Random joke</button>
         <p id="joke"></p>
+        <script src="script.js"></script>
     </body>
 </html>
